--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Shagun</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Merriweather:ital@1&family=Sacramento&display=swap" rel="stylesheet">
   </head>
@@ -12,9 +12,9 @@
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
       <h1>I'm Shagun</h1>
       <h2>a <span class="pro">pro</span>grammer</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
 
-      <img src="images/mountain.png" alt="mountain-image">
+      <img src="mountain.png" alt="mountain-image">
     </div>
     <div class="middle-container">
       <div class="profile">
