--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+      <img class="top-cloud" src="cloud.png" alt="cloud-image">
       <h1>I'm Shagun</h1>
       <h2>a <span class="pro">pro</span>grammer</h2>
       <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
